--- a/OC/Kexts/itlwm.kext/Contents/Info.plist
+++ b/OC/Kexts/itlwm.kext/Contents/Info.plist
@@ -31,9 +31,9 @@
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>19A547</string>
+	<string>16C58</string>
 	<key>DTSDKName</key>
-	<string>macosx10.15</string>
+	<string>macosx10.12</string>
 	<key>DTXcode</key>
 	<string>1110</string>
 	<key>DTXcodeBuild</key>
@@ -54,6 +54,8 @@
 			<integer>2000</integer>
 			<key>IOProviderClass</key>
 			<string>IOPCIDevice</string>
+			<key>IOUserClientClass</key>
+			<string>ItlNetworkUserClient</string>
 			<key>WiFiConfig</key>
 			<dict>
 				<key>WiFi_1</key>
@@ -88,7 +90,7 @@
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.13</string>
+	<string>10.12</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2020 钟先耀. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
