--- a/OC/Kexts/IntelBluetoothFirmware.kext/Contents/Info.plist
+++ b/OC/Kexts/IntelBluetoothFirmware.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>19E287</string>
+	<string>19F101</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,27 +17,27 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.3</string>
+	<string>1.1.1</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0.3</string>
+	<string>1.1.1</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11E146</string>
+	<string>11A1027</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>19E258</string>
+	<string>16C58</string>
 	<key>DTSDKName</key>
-	<string>macosx10.15</string>
+	<string>macosx10.12</string>
 	<key>DTXcode</key>
-	<string>1140</string>
+	<string>1110</string>
 	<key>DTXcodeBuild</key>
-	<string>11E146</string>
+	<string>11A1027</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>IntelBluetoothFirmware_ 0026</key>
@@ -46,12 +46,31 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
-			<integer>70000</integer>
+			<integer>4000</integer>
 			<key>IOProviderClass</key>
 			<string>IOUSBHostDevice</string>
 			<key>idProduct</key>
 			<integer>38</integer>
+			<key>idVendor</key>
+			<integer>32903</integer>
+		</dict>
+		<key>IntelBluetoothFirmware_ 0032</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.zxystd.IntelBluetoothFirmware</string>
+			<key>IOClass</key>
+			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
+			<key>IOProbeScore</key>
+			<integer>4000</integer>
+			<key>IOProviderClass</key>
+			<string>IOUSBHostDevice</string>
+			<key>idProduct</key>
+			<integer>50</integer>
 			<key>idVendor</key>
 			<integer>32903</integer>
 		</dict>
@@ -61,8 +80,10 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
-			<integer>70000</integer>
+			<integer>4000</integer>
 			<key>IOProviderClass</key>
 			<string>IOUSBHostDevice</string>
 			<key>idProduct</key>
@@ -76,8 +97,10 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
-			<integer>70000</integer>
+			<integer>4000</integer>
 			<key>IOProviderClass</key>
 			<string>IOUSBHostDevice</string>
 			<key>idProduct</key>
@@ -91,8 +114,10 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
-			<integer>70000</integer>
+			<integer>4000</integer>
 			<key>IOProviderClass</key>
 			<string>IOUSBHostDevice</string>
 			<key>idProduct</key>
@@ -106,8 +131,10 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
-			<integer>70000</integer>
+			<integer>4000</integer>
 			<key>IOProviderClass</key>
 			<string>IOUSBHostDevice</string>
 			<key>idProduct</key>
@@ -121,8 +148,10 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
-			<integer>70000</integer>
+			<integer>4000</integer>
 			<key>IOProviderClass</key>
 			<string>IOUSBHostDevice</string>
 			<key>idProduct</key>
@@ -136,8 +165,10 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
-			<integer>70000</integer>
+			<integer>4000</integer>
 			<key>IOProviderClass</key>
 			<string>IOUSBHostDevice</string>
 			<key>idProduct</key>
@@ -151,8 +182,10 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
-			<integer>70000</integer>
+			<integer>4000</integer>
 			<key>IOProviderClass</key>
 			<string>IOUSBHostDevice</string>
 			<key>idProduct</key>
@@ -162,7 +195,7 @@
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.13</string>
+	<string>10.12</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 钟先耀. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
